group 'com.gdeiassistant'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'war'

sourceCompatibility = 1.8

repositories {
    flatDir {
        dirs 'libs'
    }
    mavenCentral()
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'xstream', name: 'xstream', version: '1.2.2'
    compile group: 'dom4j', name: 'dom4j', version: '1.6.1'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
    compile group: 'com.aliyun.oss', name: 'aliyun-sdk-oss', version: '2.7.0'
    compile group: 'com.aliyun', name: 'aliyun-java-sdk-core', version: '3.3.1'
    compile group: 'com.aliyun', name: 'aliyun-java-sdk-sts', version: '2.1.6'
    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.8.1'
    compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.1.3'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.3'
    compile group: 'jstl', name: 'jstl', version: '1.2'
    compile group: 'taglibs', name: 'standard', version: '1.1.2'
    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.23'
    compile group: 'org.springframework', name: 'spring-context-support', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-context', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-core', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-beans', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-web', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.3.14.RELEASE'
    compile group: 'org.springframework', name: 'spring-aop', version: '4.3.14.RELEASE'
    compile group: 'org.springframework.data', name: 'spring-data-redis', version: '2.0.3.RELEASE'
    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.4.1.Final'
    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.13'
    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.13'
    compile group: 'cglib', name: 'cglib-nodep', version: '3.2.6'
    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.4'
    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.1'
    compile group: 'c3p0', name: 'c3p0', version: '0.9.1.2'
    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '2.10.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.10.0'
    compile group: 'commons-logging', name: 'commons-logging', version: '1.2'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.9'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
    compile group: 'com.aliyun', name: 'aliyun-java-sdk-core', version: '2.1.7'
    compile group: 'com.aliyun', name: 'aliyun-java-sdk-sts', version: '2.1.6'
    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.3'
    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.0.4.RELEASE'
}
